@@ -1,3 +1,9 @@
+2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-03-01
+	* fix to discard-workloop in FUResourceTable, cleanly handle
+	shutdown of connected processors now.
+
 2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-03-00
